--- a/WebContent/WEB-INF/views/404.html
+++ b/WebContent/WEB-INF/views/404.html
@@ -18,7 +18,7 @@
     <section id="main">
         <div class="container">
             <div class="alert alert-danger">
-                Error 404: Page not found. SHEH !
+                Error 404: Page not found ! :'(
                 <br/>
                 <!-- stacktrace -->
             </div>
